Fixed spacing on contact form, adjust H1 font-weight.

--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,7 @@ section {
     font-size: 2.5em;
     line-height: 1.3em;
     margin-top: 0.2em;
+    font-weight: bold;
   }
 
   .primary-cta {
@@ -164,6 +165,10 @@ label {
   display: block;
   font-size: 1.2em;
   margin-bottom: 0.5em;
+}
+
+.contact-form {
+  margin-bottom: 16px;
 }
 
 input,
